Adds Cronbachs alpha estimates for questionnaries. Adds dependability coefficient estimates for latency of ERPs

--- a/notebooks/feature_extraction.ipynb
+++ b/notebooks/feature_extraction.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e9e84d26-b32c-41ae-b3f4-81e0ee55156b",
    "metadata": {
     "tags": []
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "cdc483a7-410f-4b65-9955-9df42c783bb7",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "27a25389-d030-415b-982d-b68df981b758",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7c412f36-66a2-4fd8-bfa7-caa98c4a315c",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0991419b-7acd-42bc-b048-e5e9fa3cb3e6",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "aa88517e-884a-4b5b-9652-1bf2e7787aef",
    "metadata": {
     "tags": []
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "264dc68c-de05-4885-b579-2d887884ca83",
    "metadata": {},
    "outputs": [],
@@ -460,10 +460,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9db8c673-5477-4126-b09d-870a8fcd9477",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pickled file found. Loading pickled data...\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "# %%capture\n",
     "df_name = \"GNG_autoreject_3_5\"\n",
@@ -494,17 +503,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ffa25d09-4ebb-4c3e-a89a-8ae1b80c7a44",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(110, 188)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "epochs_train_opus_df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "5b87e8aa-5ca4-4735-a004-7fd9a5a414d5",
    "metadata": {},
    "outputs": [],
@@ -522,10 +542,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "06f6b138-bc55-49c5-9eff-940a01b5bd3b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pickled file found. Loading pickled data...\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "# %%capture\n",
     "df_name = \"GNG_autoreject_sonata_3_5_stai\"\n",
@@ -557,10 +586,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "23c4ef30-2d15-43d6-966e-a4118714233b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(150, 110)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "epochs_train_sonata_df.shape"
    ]
@@ -575,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ffe2568a-e1d2-4c8b-92f7-151b862e1d9c",
    "metadata": {},
    "outputs": [],
@@ -585,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "3e41a7a0-7541-4020-87ae-7f305d7a157f",
    "metadata": {},
    "outputs": [],
@@ -598,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "7219ac12-4837-41a1-abad-29ae5fdd4036",
    "metadata": {},
    "outputs": [],
@@ -609,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "c2b04671-603a-4678-8889-8f77cf9a28b0",
    "metadata": {},
    "outputs": [],
@@ -621,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "78171035-125b-4a1b-8b00-a8a8a7cfc594",
    "metadata": {
     "tags": []
@@ -649,10 +689,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "8c990ac1-14fc-4d0c-bf5d-d96f076e1e41",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pickled file found. Loading pickled data...\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "# %%capture\n",
     "df_name = \"GNG_autoreject_3_5_test_performance\"\n",
@@ -682,17 +731,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "271cd307-5952-47a6-87f9-2a482da8924e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(45, 164)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "epochs_test_opus_df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "182b6d20-9599-4d6f-bf32-f8b98c14e0e1",
    "metadata": {},
    "outputs": [],
@@ -710,10 +770,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "7f54d80f-6c7f-4c9c-a4a2-4564dd15c949",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pickled file found. Loading pickled data...\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "# %%capture\n",
     "df_name = \"GNG_autoreject_sonata_3_5_test_stai\"\n",
@@ -743,10 +812,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "406ede1f-481c-4e12-9613-db9eeb0c147a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(67, 110)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "epochs_test_sonata_df.shape"
    ]
@@ -761,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "eb09c36d-6613-4093-b6aa-4af0c49b3574",
    "metadata": {},
    "outputs": [],
@@ -771,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "e80e3cdb-5907-48e4-99f3-89d2580780cc",
    "metadata": {},
    "outputs": [],
@@ -784,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "ba725e66-37f2-4b5d-97bc-c509ab15468a",
    "metadata": {},
    "outputs": [],
@@ -795,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "162b5fa8-e82a-4df8-b9ae-8acaf64a643e",
    "metadata": {},
    "outputs": [],
@@ -807,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "f715e371-377a-465f-aefa-84cb7b8565cd",
    "metadata": {
     "tags": []
@@ -829,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "784b4bd7-f3b6-4707-8662-b266913fb3b2",
    "metadata": {},
    "outputs": [],
@@ -842,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "f0cec6de-6ce0-458f-ad00-79de41daa9af",
    "metadata": {},
    "outputs": [],
@@ -864,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "0f96e09d-e718-4a2e-9555-41c942673904",
    "metadata": {},
    "outputs": [],
@@ -883,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "e1b99eb8-aa51-447d-81f2-cc7018f304df",
    "metadata": {},
    "outputs": [],
@@ -894,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "39b940ac-d7f7-44fd-bbda-6a9503a388fe",
    "metadata": {},
    "outputs": [],
@@ -904,10 +984,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "8e98fe0f-a0ae-4022-93d8-b2382a82692e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(260, 40)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "epochs_df.shape"
    ]
@@ -1232,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "d80e0bd2-5952-4cab-9b60-f5fcd1720a6c",
    "metadata": {},
    "outputs": [],
@@ -1275,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "af1a2ab3-e09a-4465-88ea-ee18f38c7d62",
    "metadata": {},
    "outputs": [],
@@ -1288,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "4e5f1b4e-ebd9-488f-9fb6-0a052bc2b9ca",
    "metadata": {},
    "outputs": [],
@@ -1298,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "5b876351-bd1e-4312-8eda-57238b7d4e3b",
    "metadata": {
     "tags": []
