--- a/notebooks/net_models_visualizations.ipynb
+++ b/notebooks/net_models_visualizations.ipynb
@@ -46,9 +46,7 @@
     "import copy\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "import utils\n",
-    "\n",
-    "warnings.filterwarnings(\"ignore\")"
+    "import utils"
    ]
   },
   {
@@ -160,6 +158,61 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d0c6b62d-7a2d-429a-b79f-db7e57a2a40d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mapping = {\n",
+    "    \"RRQ\": \"1Q\",\n",
+    "    \"DASS-21 Stress\": \"2Q\",\n",
+    "    \"DASS-21 Dep\": \"3Q\",\n",
+    "    \"STAI-T\": \"4Q\",\n",
+    "    \"STAI-S Diff\": '5Q',\n",
+    "    \"BIS\": \"6Q\",\n",
+    "    \"OBSESS\": \"7Q\",\n",
+    "    \"HOARD\": \"8Q\",\n",
+    "    \"ORD\": \"9Q\",\n",
+    "    \"CHECK\": \"10Q\",\n",
+    "    \"WBSI\": \"11Q\",\n",
+    "    \"IUS-P\": \"12Q\",\n",
+    "    \"IUS-I\": \"13Q\",\n",
+    "    \"SES\": \"14Q\",\n",
+    "    'BAS_D': \"15Q\",\n",
+    "    'BAS_PRZY': \"16Q\",\n",
+    "    'BAS_NAG': \"17Q\",\n",
+    "    'INDEC_F': \"18Q\",\n",
+    "    'PUN': \"19Q\",\n",
+    "    'REW': \"20Q\",\n",
+    "    'HARM': \"21Q\",\n",
+    "    'T-CTR': \"22Q\",\n",
+    "    \"OT\": \"23Q\",\n",
+    "    'OB_PERF': \"24Q\",\n",
+    "    'PS': \"25Q\",\n",
+    "    'G_SE': \"26Q\",\n",
+    "    'AMB': \"27Q\",\n",
+    "    'PRED': \"28Q\",\n",
+    "    'STAND': \"29Q\",   \n",
+    "    \"Age\": \"1C\",\n",
+    "    \"Handness\": \"2C\",\n",
+    "    'e_ERN': \"1E\",\n",
+    "    'e_LT_F': \"4C\",\n",
+    "    'performance': \"3C\",\n",
+    "    'e_CRN': \"2E\",\n",
+    "    'e_LT_F2_C': \"4C\",\n",
+    "    'performance': \"3C\",\n",
+    "}\n",
+    "\n",
+    "ern_order = ['1E', '1Q', '2Q', '3Q', '4Q', '5Q', '6Q', '7Q', '8Q', '9Q', '10Q', '11Q', '12Q', '13Q', '14Q', '15Q', '16Q', '17Q', '18Q', '19Q', '20Q', '21Q', '22Q', '23Q', '24Q', '25Q', '26Q', '27Q', '28Q', '29Q',]\n",
+    "ern_cov_order = ['1E', '1Q', '2Q', '3Q', '4Q', '5Q', '6Q', '7Q', '8Q', '9Q', '10Q', '11Q', '12Q', '13Q', '14Q', '15Q', '16Q', '17Q', '18Q', '19Q', '20Q', '21Q', '22Q', '23Q', '24Q', '25Q', '26Q', '27Q', '28Q', '29Q', '1C', '2C', '3C', '4C']\n",
+    "crn_order = ['2E', '1Q', '2Q', '3Q', '4Q', '5Q', '6Q', '7Q', '8Q', '9Q', '10Q', '11Q', '12Q', '13Q', '14Q', '15Q', '16Q', '17Q', '18Q', '19Q', '20Q', '21Q', '22Q', '23Q', '24Q', '25Q', '26Q', '27Q', '28Q', '29Q',]\n",
+    "crn_cov_order = ['2E', '1Q', '2Q', '3Q', '4Q', '5Q', '6Q', '7Q', '8Q', '9Q', '10Q', '11Q', '12Q', '13Q', '14Q', '15Q', '16Q', '17Q', '18Q', '19Q', '20Q', '21Q', '22Q', '23Q', '24Q', '25Q', '26Q', '27Q', '28Q', '29Q', '1C', '2C', '3C', '4C']\n",
+    "\n",
+    "orders = [ern_order, ern_cov_order, crn_order, crn_cov_order]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4d462959-acc5-4f43-af0d-debcafeca779",
    "metadata": {
     "tags": []
@@ -168,10 +221,12 @@
    "source": [
     "sns.set(rc={'figure.figsize':(30 , 30)})\n",
     "\n",
-    "for i, matrix in enumerate(precision_matrixes):\n",
+    "for i, (matrix, order) in enumerate(zip(precision_matrixes, orders)):\n",
     "    plt.figure(i)\n",
+    "    this_matrix = matrix.rename(columns=mapping, index=mapping).reindex(columns=order, index=order)\n",
+    "    this_matrix.to_csv(f'../data/precision_matrixes/precision_matrix_{i}.csv')\n",
     "    sns.heatmap(\n",
-    "        data = matrix,\n",
+    "        data = this_matrix,\n",
     "        annot=True        \n",
     "    )"
    ]
@@ -237,11 +292,14 @@
    "source": [
     "sns.set(rc={'figure.figsize':(30 , 30)})\n",
     "\n",
-    "for i, matrix in enumerate(partial_correlation_matrices):\n",
+    "for i, (matrix, order) in enumerate(zip(partial_correlation_matrices, orders)):\n",
     "    plt.figure(i)\n",
-    "    mask = np.triu(matrix)\n",
+    "    this_matrix = matrix.rename(columns=mapping, index=mapping).reindex(columns=order, index=order)\n",
+    "    this_matrix.to_csv(f'../data/precision_matrixes/partial_correlation_matrix_{i}.csv')\n",
+    "    \n",
+    "    mask = np.triu(this_matrix)\n",
     "    sns.heatmap(\n",
-    "        data = matrix,\n",
+    "        data = this_matrix,\n",
     "        annot=True,\n",
     "        center = 0.0,\n",
     "        cmap='vlag',\n",
