Adds ERN with CRN analyses

--- a/notebooks/behavioral_results.ipynb
+++ b/notebooks/behavioral_results.ipynb
@@ -65,6 +65,7 @@
     "from scipy.stats import boxcox\n",
     "from sklearn.metrics import auc\n",
     "\n",
+    "import pingouin as pg\n",
     "\n",
     "from scipy.stats import pearsonr\n",
     "\n",
@@ -887,6 +888,99 @@
    "source": [
     "epochs_train_df = pd.concat([epochs_train_sonata_df, epochs_train_opus_df], ignore_index=True)\n",
     "epochs_test_df = pd.concat([epochs_test_sonata_df, epochs_test_opus_df], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01ac6d82-a70c-4c39-9448-e39f16a5d2d1",
+   "metadata": {},
+   "source": [
+    "### Add info on consistency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "774868f5-390d-4e93-811f-523e92173fd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "within_consistency_ern_df = pd.read_csv(f'../data/consistency_tests/train/ern_amplitude_within.csv')\n",
+    "internal_consistency_ern_df = pd.read_csv(f'../data/consistency_tests/train/ern_amplitude_consistency.csv')\n",
+    "within_consistency_crn_df = pd.read_csv(f'../data/consistency_tests/train/crn_amplitude_within.csv')\n",
+    "internal_consistency_crn_df = pd.read_csv(f'../data/consistency_tests/train/crn_amplitude_consistency.csv')\n",
+    "\n",
+    "consistency_ern_df = within_consistency_ern_df.merge(internal_consistency_ern_df, on ='Unnamed: 0')\n",
+    "consistency_ern_df = consistency_ern_df[consistency_ern_df['pipeline_x'] == 'Fz']\n",
+    "\n",
+    "consistency_crn_df = within_consistency_crn_df.merge(internal_consistency_crn_df, on ='Unnamed: 0')\n",
+    "consistency_crn_df = consistency_crn_df[consistency_crn_df['pipeline_x'] == 'Fz']\n",
+    "\n",
+    "consistency_train_df = consistency_ern_df.merge(consistency_crn_df, on='id', suffixes=('_ern', '_crn'))\n",
+    "display(consistency_train_df.head())\n",
+    "\n",
+    "\n",
+    "within_consistency_ern_df = pd.read_csv(f'../data/consistency_tests/test/ern_amplitude_within.csv')\n",
+    "internal_consistency_ern_df = pd.read_csv(f'../data/consistency_tests/test/ern_amplitude_consistency.csv')\n",
+    "within_consistency_crn_df = pd.read_csv(f'../data/consistency_tests/test/crn_amplitude_within.csv')\n",
+    "internal_consistency_crn_df = pd.read_csv(f'../data/consistency_tests/test/crn_amplitude_consistency.csv')\n",
+    "\n",
+    "consistency_ern_df = within_consistency_ern_df.merge(internal_consistency_ern_df, on ='Unnamed: 0')\n",
+    "consistency_ern_df = consistency_ern_df[consistency_ern_df['pipeline_x'] == 'Fz']\n",
+    "\n",
+    "consistency_crn_df = within_consistency_crn_df.merge(internal_consistency_crn_df, on ='Unnamed: 0')\n",
+    "consistency_crn_df = consistency_crn_df[consistency_crn_df['pipeline_x'] == 'Fz']\n",
+    "\n",
+    "consistency_test_df = consistency_ern_df.merge(consistency_crn_df, on='id_x', suffixes=('_ern', '_crn'))\n",
+    "consistency_test_df = consistency_test_df.rename(columns={'id_x': 'id'})\n",
+    "display(consistency_test_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e172fec1-7577-4e4d-89e6-cb358c088c5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold_consistency = 0.7\n",
+    "\n",
+    "\n",
+    "epochs_train_df = epochs_train_df.merge(consistency_train_df[['internal_variance_ern', 'internal_variance_crn', 'id']], on='id')\n",
+    "epochs_train_df = epochs_train_df[\n",
+    "        (epochs_train_df['internal_variance_ern'] >= threshold_consistency) &\n",
+    "        (epochs_train_df['internal_variance_crn'] >= threshold_consistency)\n",
+    "]\n",
+    "\n",
+    "epochs_test_df = epochs_test_df.merge(consistency_test_df[['internal_variance_ern', 'internal_variance_crn', 'id']], on='id')\n",
+    "epochs_test_df = epochs_test_df[\n",
+    "        (epochs_test_df['internal_variance_ern'] >= threshold_consistency) &\n",
+    "        (epochs_test_df['internal_variance_crn'] >= threshold_consistency)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2136cc7c-181f-4b0d-91cc-4c26be9c740d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs_train_df[\"Sex\"] = pd.to_numeric(epochs_train_df[\"Sex\"])\n",
+    "display(epochs_train_df.describe())\n",
+    "epochs_train_df[\"Sex\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ad6a3c6-1cb5-40b6-8d1b-33187970f99c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs_test_df[\"Sex\"] = pd.to_numeric(epochs_test_df[\"Sex\"])\n",
+    "display(epochs_test_df.describe())\n",
+    "epochs_test_df[\"Sex\"].value_counts()"
    ]
   },
   {
@@ -2091,7 +2185,7 @@
     "    \n",
     "})\n",
     "\n",
-    "results_df = pd.concat([questionnaires_scores_df, demographical_scores_df, eeg_features_df], axis=1)\n",
+    "results_df = pd.concat([questionnaires_scores_df.reset_index().drop(columns='index'), demographical_scores_df.reset_index().drop(columns='index'), eeg_features_df.reset_index().drop(columns='index')], axis=1)\n",
     "# results_df.to_pickle(f\"../data/behavioral/all_variables_{dataset}.pkl\")\n",
     "results_df.head()"
    ]
@@ -2154,7 +2248,7 @@
    "source": [
     "with pd.option_context('display.max_colwidth', None, 'display.max_columns', None):\n",
     "    display(results_df.rename(columns=column_names_mapping).describe().round(decimals=2).transpose())\n",
-    "    results_df.rename(columns=column_names_mapping).describe().round(decimals=2).transpose().to_csv(f'../data/behavioral/all_variables_{dataset}_describe.csv')"
+    "    results_df.rename(columns=column_names_mapping).describe().round(decimals=2).transpose().to_csv(f'../new_data/behavioral/all_variables_{dataset}_describe.csv')"
    ]
   },
   {
@@ -2242,11 +2336,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4fc56398-d760-4805-901e-5d5e96dd1324",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_training_summary = df_training.describe().T\n",
+    "df_training_summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "599c694d-6e06-4e33-9b05-17ae94e61775",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_testing = df "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "283a94f5-4c24-44b1-87eb-26be1976a609",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_testing"
    ]
   },
   {
@@ -2262,8 +2377,29 @@
     "    \n",
     "    stats, p_val = scipy.stats.ttest_ind(variable_training, variable_testing)\n",
     "    print(f'---: \\n  {column}     \\n  p-value: {p_val}')\n",
+    "    df_training_summary.loc[column, 'p-val'] = p_val\n",
     "    if p_val < 0.05:\n",
     "        print('Different')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce78c8fb-096e-49f5-9fd4-f4917debcd49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_training_summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27d59ab3-938c-4a98-a3c2-782c2fd60e17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_training_summary.to_csv('../new_data/behavioral/train_summary.csv')"
    ]
   },
   {
@@ -2491,7 +2627,7 @@
     "plt.setp(g._legend.get_texts(), fontsize=9)\n",
     "\n",
     "plt.show()\n",
-    "fig.savefig(f'../data/scales_density/train_test_scales_density', bbox_inches='tight', pad_inches=0.01)"
+    "fig.savefig(f'../new_data/scales_density/train_test_scales_density', bbox_inches='tight', pad_inches=0.01)"
    ]
   },
   {
@@ -2731,7 +2867,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "edu_loaded_sample_df['Education'].iloc[47] = 13.5\n",
+    "edu_loaded_sample_df['Education'].iloc[40] = 13.5\n",
     "edu_loaded_sample_df['Education'] = pd.to_numeric(edu_loaded_sample_df['Education'])\n",
     "edu_loaded_sample_df.describe()"
    ]
@@ -2764,8 +2900,36 @@
     "    scale_df.drop(columns=columns_to_drop, inplace=True)\n",
     "    scale_df = scale_df.apply(pd.to_numeric, errors='ignore')\n",
     "\n",
-    "    print(pg.cronbach_alpha(data=scale_df))"
+    "    print(pg.cronbach_alpha(data=scale_df)[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ea7a9a1-cee0-4364-ac23-e0b860775881",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = pd.read_csv('../new_data/behavioral/all_variables_train_describe.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da4987d3-4d79-4867-9365-7e2c35f79520",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9767731c-a9f2-4201-9d5f-080980388ad0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
