--- a/notebooks/correlation_analysis.ipynb
+++ b/notebooks/correlation_analysis.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = 'test'\n",
+    "dataset = 'train'\n",
     "test = False if dataset == 'train' else False"
    ]
   },
@@ -68,10 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_ern_lat_demo_df = pd.read_pickle(f\"../data/models_pickles_new_dass/ern_cov_fal_models_{dataset}.pkl\")\n",
-    "results_crn_lat_demo_df = pd.read_pickle(f\"../data/models_pickles_new_dass/crn_cov_fal2_models_{dataset}.pkl\")\n",
-    "\n",
-    "train_datasets = [results_ern_lat_demo_df, results_crn_lat_demo_df]"
+    "results_ern_crn_lat_demo_df = pd.read_pickle(f\"../data/models_pickles_new_dass/ern_crn_cov_fal_models_{dataset}_id_clean.pkl\")"
    ]
   },
   {
@@ -89,42 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_ern_lat_demo_test_df = pd.read_pickle(f\"../data/models_pickles_new_dass/ern_cov_fal_models_test.pkl\")\n",
-    "results_crn_lat_demo_test_df = pd.read_pickle(f\"../data/models_pickles_new_dass/crn_cov_fal2_models_test.pkl\")\n",
-    "\n",
-    "# fill nan\n",
-    "results_crn_lat_demo_test_df['e_LT_F2_C'] = results_crn_lat_demo_test_df['e_LT_F2_C'].fillna(results_crn_lat_demo_test_df['e_LT_F2_C'].mean())\n",
-    "\n",
-    "test_datasets = [results_ern_lat_demo_test_df, results_crn_lat_demo_test_df]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3df2e48a-e537-417e-bfb1-9daef9bab0b5",
-   "metadata": {},
-   "source": [
-    "### Create delta ERN - CRN measure"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "296f5310-5cf5-481f-b75f-b00172d3e12a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "datasets = test_datasets if test else train_datasets\n",
-    "\n",
-    "ern_values = datasets[0]['e_ERN'].to_numpy()\n",
-    "crn_values = datasets[1]['e_CRN'].to_numpy()\n",
-    "\n",
-    "ern_crn_diff_values = ern_values - crn_values\n",
-    "ern_crn_diff_df = pd.DataFrame(ern_crn_diff_values.reshape(-1,1), columns=['ERN\\CRN delta'])\n",
-    "\n",
-    "# Add new column to dataset\n",
-    "ern_delta_data_df = pd.concat([ern_crn_diff_df, datasets[0]], axis=1).drop(columns='e_ERN')\n",
-    "\n",
-    "datasets.append(ern_delta_data_df)"
+    "results_ern_crn_lat_demo_df_test = pd.read_pickle(f\"../data/models_pickles_new_dass/ern_crn_cov_fal_models_test_id_clean.pkl\")"
    ]
   },
   {
@@ -138,11 +100,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0935dc35-cca4-4b0f-b3aa-63e731cc6f8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasets = [results_ern_crn_lat_demo_df, results_ern_crn_lat_demo_df_test]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2523069f-1916-4442-93d6-5278edbc943b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasets = [dataset.drop(columns=['Sex', 'WASH', 'NEU'])for dataset in datasets]"
+    "datasets = [dataset.drop(columns=['Sex', 'id'])for dataset in datasets]"
    ]
   },
   {
@@ -160,43 +132,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapping = {\n",
-    "    \"RRQ\": \"1Q\",\n",
-    "    \"DASS-21 Stress\": \"2Q\",\n",
-    "    \"DASS-21 Dep\": \"3Q\",\n",
-    "    \"STAI-T\": \"4Q\",\n",
-    "    \"STAI-S Diff\": '5Q',\n",
-    "    \"BIS\": \"6Q\",\n",
-    "    \"OBSESS\": \"7Q\",\n",
-    "    \"HOARD\": \"8Q\",\n",
-    "    \"ORD\": \"9Q\",\n",
-    "    \"CHECK\": \"10Q\",\n",
-    "    \"WBSI\": \"11Q\",\n",
-    "    \"IUS-P\": \"12Q\",\n",
-    "    \"IUS-I\": \"13Q\",\n",
-    "    \"SES\": \"14Q\",\n",
-    "    'BAS_D': \"15Q\",\n",
-    "    'BAS_PRZY': \"16Q\",\n",
-    "    'BAS_NAG': \"17Q\",\n",
-    "    'INDEC_F': \"18Q\",\n",
-    "    'PUN': \"19Q\",\n",
-    "    'REW': \"20Q\",\n",
-    "    'HARM': \"21Q\",\n",
-    "    'T-CTR': \"22Q\",\n",
-    "    \"OT\": \"23Q\",\n",
-    "    'OB_PERF': \"24Q\",\n",
-    "    'PS': \"25Q\",\n",
-    "    'G_SE': \"26Q\",\n",
-    "    'AMB': \"27Q\",\n",
-    "    'PRED': \"28Q\",\n",
-    "    'STAND': \"29Q\",   \n",
-    "    \"Age\": \"1C\",\n",
-    "    \"Handness\": \"2C\",\n",
-    "    'e_ERN': \"1E\",\n",
-    "    'e_LT_F': \"4C\",\n",
-    "    'performance': \"3C\",\n",
-    "    'e_CRN': \"2E\",\n",
-    "    'e_LT_F2_C': \"4C\",\n",
+    "control_mapping = {\n",
+    "    \"RRQ\": \"RRQ\",\n",
+    "    \"DASS-21 Stress\": \"STR\",\n",
+    "    \"DASS-21 Dep\": \"DEP\",\n",
+    "    \"STAI-T\": \"ANX\",\n",
+    "    \"STAI-S Diff\": 'AFL',\n",
+    "    \"BIS\": \"BIS\",\n",
+    "    \"OBSESS\": \"OBS\",\n",
+    "    \"HOARD\": \"HRD\",\n",
+    "    \"ORD\": \"ORD\",\n",
+    "    \"CHECK\": \"CHK\",\n",
+    "    \"WBSI\": \"TSU\",\n",
+    "    \"IUS-P\": \"PIU\",\n",
+    "    \"IUS-I\": \"IIU\",\n",
+    "    \"SES\": \"SES\",\n",
+    "    'BAS_D': \"DRV\",\n",
+    "    'BAS_PRZY': \"FUN\",\n",
+    "    'BAS_NAG': \"RER\",\n",
+    "    'INDEC_F': \"IND\",\n",
+    "    'PUN': \"PUN\",\n",
+    "    'REW': \"REW\",\n",
+    "    'HARM': \"HRM\",\n",
+    "    'T-CTR': \"TCR\",\n",
+    "    \"OT\": \"THR\",\n",
+    "    'OB_PERF': \"PER\",\n",
+    "    'PS': \"STN\",\n",
+    "    'G_SE': \"GLT\",\n",
+    "    'AMB': \"AMB\",\n",
+    "    'PRED': \"NPR\",\n",
+    "    'STAND': \"STD\",   \n",
+    "    \"Age\": \"AGE\",\n",
+    "    \"Handness\": \"HND\",\n",
+    "    'e_ERN': \"ERN\",\n",
+    "    'e_LT_F': \"LT-E\",\n",
+    "    'performance': \"PRF\",\n",
+    "    'e_CRN': \"CRN\",\n",
+    "    'e_LT_F2_C': \"LT-C\",\n",
+    "    'performance': \"PRF\",\n",
+    "    'Sex': 'SEX'\n",
     "}"
    ]
   },
@@ -207,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def corr_with_p(df):\n",
+    "def corr_with_p(df, mapping):\n",
     "    df = df.rename(columns=mapping)\n",
     "    rho = df.corr()\n",
     "    pval = df.corr(method=lambda x, y: pearsonr(x, y)[1]) - np.eye(*rho.shape)\n",
@@ -226,15 +200,135 @@
     "\n",
     "for index, this_dataset in enumerate(datasets):\n",
     "    print(index)\n",
-    "    corr_p, corr = corr_with_p(this_dataset)\n",
-    "    corr_p.to_csv(f'../data/correlation_matrixes/{dataset}/correlation_matrix_{index}.csv')\n",
+    "    corr_p, corr = corr_with_p(this_dataset, control_mapping)\n",
+    "    corr_p.to_csv(f'../new_results/correlation_matrixes/correlation_matrix_{index}.csv')\n",
     "    display(corr_p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29493015-0dfc-4eee-9554-9c43e0bca1ae",
+   "metadata": {},
+   "source": [
+    "### Plot results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4572d29e-0350-4ecd-8944-ae6936eb6704",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = datasets[0].rename(columns=control_mapping)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "27c843b8-e450-44d7-b42d-84fc38a394b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cm = 1/2.54\n",
+    "dpi = 500\n",
+    "\n",
+    "sns.set_style(\"white\")\n",
+    "plt.rcParams['figure.dpi'] = dpi\n",
+    "plt.rcParams['figure.figsize'] = [15*cm,15*cm]\n",
+    "plt.rcParams[\"font.size\"] = 4\n",
+    "\n",
+    "from scipy.stats import pearsonr\n",
+    "from scipy.stats import spearmanr\n",
+    "from scipy.stats import kendalltau\n",
+    "import textwrap\n",
+    "# Generate the correlation matrix afresh\n",
+    "corr = df.corr(numeric_only=True)\n",
+    "\n",
+    "# mask the correlation matrix to diagonal\n",
+    "mask = np.zeros_like(corr, dtype=bool)\n",
+    "mask[np.triu_indices_from(mask)] = True\n",
+    "np.fill_diagonal(mask, False)\n",
+    "\n",
+    "fix,ax = plt.subplots(figsize=(15*cm,15*cm))\n",
+    "\n",
+    "# Generate heatmap\n",
+    "heatmap = sns.heatmap(corr,\n",
+    "                      annot= True,\n",
+    "                      annot_kws={\"fontsize\": 3.5},\n",
+    "                      fmt='.2f',\n",
+    "                      linewidths=0.5,\n",
+    "                      cmap='RdBu',\n",
+    "                      cbar=False,\n",
+    "                      mask=mask,\n",
+    "                      ax=ax)\n",
+    "\n",
+    "# calculate and format p-values\n",
+    "p_values = np.full((corr.shape[0], corr.shape[1]), np.nan)\n",
+    "for i in range(corr.shape[0]):\n",
+    "  for j in range(i+1, corr.shape[1]):\n",
+    "    x = df.iloc[:, i]\n",
+    "    y = df.iloc[:, j]\n",
+    "    mask = ~np.logical_or(np.isnan(x), np.isnan(y))\n",
+    "    if np.sum(mask) > 0:\n",
+    "      p_values[i, j] = kendalltau(x[mask], y[mask])[1] #change to pearsonr or spearmanr\n",
+    "\n",
+    "# Create a dataframe object for p_values\n",
+    "p_values = pd.DataFrame(p_values, columns=corr.columns, index=corr.index)\n",
+    "\n",
+    "# Mask the p values\n",
+    "mask_pvalues = np.triu(np.ones_like(p_values), k=1)\n",
+    "\n",
+    "# Generate maximum and minimum correlation coefficients for p-value annotation color\n",
+    "max_corr = np.max(corr.max())\n",
+    "min_corr = np.min(corr.min())\n",
+    "\n",
+    "# Assign p-value annotations, include asterisks for significance\n",
+    "for i in range (p_values.shape[0]):\n",
+    "  for j in range(p_values.shape[1]):\n",
+    "    if mask_pvalues[i, j]:\n",
+    "      p_value = p_values.iloc[i, j]\n",
+    "      if not np.isnan(p_value):\n",
+    "        correlation_value = corr.iloc[i, j]\n",
+    "        text_color = 'white' if correlation_value >= (max_corr - 0.4) or correlation_value <= (min_corr + 0.4) else 'black'\n",
+    "        if p_value <= 0.01:\n",
+    "            #include double asterisks for p-value <= 0.01\n",
+    "            ax.text(i + 0.5, j + 0.8, f'[{p_value:.2f}]',\n",
+    "                    horizontalalignment='center',\n",
+    "                    verticalalignment='center',\n",
+    "                    fontsize=3,\n",
+    "                    color=text_color)\n",
+    "        elif p_value <= 0.05:\n",
+    "            #include single asterisk for p-value <= 0.05\n",
+    "            ax.text(i + 0.5, j + 0.8, f'[{p_value:.2f}]',\n",
+    "                    horizontalalignment='center',\n",
+    "                    verticalalignment='center',\n",
+    "                    fontsize=3,\n",
+    "                    color=text_color)\n",
+    "        else:\n",
+    "            ax.text(i + 0.5, j + 0.8, f'[{p_value:.2f}]',\n",
+    "                    horizontalalignment='center',\n",
+    "                    verticalalignment='center',\n",
+    "                    fontsize=3,\n",
+    "                    color=text_color)\n",
+    "\n",
+    "# Customize x-axis labels\n",
+    "x_labels = [textwrap.fill(label.get_text(), 4) for label in ax.get_xticklabels()]\n",
+    "ax.set_xticklabels(x_labels, rotation=90, ha=\"center\")\n",
+    "\n",
+    "# Customize y-axis labels\n",
+    "y_labels = [textwrap.fill(label.get_text(), 4) for label in ax.get_yticklabels()]\n",
+    "ax.set_yticklabels(y_labels, rotation=0, ha=\"right\")\n",
+    "\n",
+    "# Display the plot\n",
+    "plt.show()\n",
+    "fix.savefig(f\"../new_results/correlation_matrixes/correlation_matrix_train.png\",  bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4a0f622-b633-4006-977d-0a2ee673dd21",
    "metadata": {},
    "outputs": [],
    "source": []
